app/assets/stylesheets/festivals/_show.scss
.render-wrapper {
  width: 100%;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin-top: 50px !important;

  @media (max-width: 540px) {
    margin-top: 25px !important;
    justify-content: space-around;
  }
}
.festival-name {
  color: white;
}

.font-electronica {
  font-family: electronicadisplay;
  font-weight: bold;
}

.suggestions {
  font-family: electronicadisplay;
  font-size: 12px;
  color: black;
}

.schedule {
  font-family: electronicadisplay;
  font-size: 12px;
  color: black;
  height: 400px!important;
  overflow-y: scroll!important;
}

.schedule-header {

  h1 {
    font-family: electronicadisplay;
    font-size: 18px;
    font-weight: bold;
    color: black;
  }
}

.suggestions-header {
  color: black;
  font-size: 20px;

  h2 {
    font-family: electronicadisplay;
  }
}

.scroll-div {
  overflow-y: scroll !important;
  height: 500px;
  width: 90%;
  margin: 0 auto;
  background-color: rgba(255, 255, 255, 0.75) !important;
  border-radius: 10px;
}

.highlights-p-tag {
  font-family: 'comfortaa', serif;

  @media (max-width: 540px) {
    font-size: 10px;
  }
}

.social-highlight-card {
  width: 30vw;

  @media (max-width: 540px) {
    margin-bottom: 16px;
    width: 80vw;
  }
}

.social-card-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;

  @media (max-width: 540px) {

  }
}

.youtube {
  min-width: 480px;

  iframe {
    width: 100%;
  }

  @media (max-width: 540px) {
    min-width: 300px;
  }
}

.artists-generated-p {
  font-size: 12px;
  font-family: 'comfortaa', serif;

  @media (max-width: 540px) {
    font-size: 8px;
  }
}

.size-16px {
  font-size: 16px;
}

// PDF STYLING
.container-pdf {
  background-color: rgba(1, 18, 26, 0.4);
  color: white;
  margin: 0 auto;
  width: 500px;
}

.pdf-day-styling {
  font-weight: bold;
  color: #01121d;
  text-shadow: 1px 1px 2px #c6a1bc;
}

.pdf-suggestions-styling, .pdf-header-styling {
  font-weight: bold;
  text-shadow: 2px 2px 2px #c6a1bc;
}

